feat: readiness endpoint
